k8s_charts/kustomize/base/deployment-workernode.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kolibri-service-compute
  labels:
    app: kolibri-service
    app.kubernetes.io/name: kolibri-service
    app.kubernetes.io/instance: kolibri-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kolibri-service
      app.kubernetes.io/name: kolibri-service
      app.kubernetes.io/instance: kolibri-service
      type: compute
  template:
    metadata:
      annotations:
        service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
      labels:
        app: kolibri-service
        app.kubernetes.io/name: kolibri-service
        app.kubernetes.io/instance: kolibri-service
        # actorSystemName should not be needed for setup to work, yet we add this as identifier to which actor
        # system the pod belongs (should be same value as actor system name given in the configmap)
        actorSystemName: KolibriAppSystem
        # type label indicating it is a compute (or synonymously worker) node
        type: compute
    spec:
      volumes:
      # procedure of mounting key secret for the used service account described here:
      # https://cloud.google.com/kubernetes-engine/docs/tutorials/authenticating-to-cloud-platform
      - name: google-cloud-key
        secret:
          # TODO: substitute placeholder for real value
          secretName: ##GCP_CLOUD_KEY_SECRET_NAME
      # TODO: substitute placeholder for real value
      serviceAccountName: ##GCP_SERVICE_ACCOUNT_NAME
      containers:
        - name: kolibri-service
          image: awagen/kolibri-base:0.1.0-rc1
          imagePullPolicy: Always
          volumeMounts:
          # part of mounting the secret, link to procedure given above
          - name: google-cloud-key
            mountPath: /var/secrets/google
          ports:
            # akka management port (internal use)
            - name: management
              containerPort: 8558
              protocol: TCP
            # cluster node ip (internal use)
            - name: clusternode
              containerPort: 8001
              protocol: TCP
            # prometheus metrics collection port
            - name: prometheus
              containerPort: 9095
            # port to access kamon status-page
            - name: kamonstatus
              containerPort: 5266
          livenessProbe:
            failureThreshold: 300
            httpGet:
              path: /alive
              port: 8558
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 300
            httpGet:
              path: /ready
              port: 8558
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: "1024Mi"
              cpu: "2"
            requests:
              memory: "1024Mi"
              cpu: "2"
