k8s_charts/kustomize/base/service-compute.yml
apiVersion: v1
kind: Service
metadata:
  name: kolibri-service-compute
  labels:
    app: kolibri-service
    app.kubernetes.io/name: kolibri-service
    app.kubernetes.io/instance: kolibri-service
spec:
  type: ClusterIP
  ports:
    - port: 9095
      targetPort: 9095
      protocol: TCP
      name: service-prometheus
  selector:
    # limit this to the http node, we dont want to expose the compute pods
    # as service
    app: kolibri-service
    app.kubernetes.io/name: kolibri-service
    app.kubernetes.io/instance: kolibri-service
    type: compute
